# melissi

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/machine/: Cargo.toml
crates/machine/src/: explore.rs  lib.rs
crates/machine/tests/: parity.rs
crates/neighbourhood/: Cargo.toml
crates/neighbourhood/src/: explore.rs  lib.rs
crates/neighbourhood/tests/: parity.rs
crates/net/: Cargo.toml
crates/net/src/: dnsaddr.rs  handshake.rs  hive.rs  lib.rs  pb.rs  pricing.rs  pullsync.rs  runtime.rs  swarm.rs  transport.rs  underlay.rs
crates/node/: Cargo.toml
crates/node/src/: discovery.rs  lib.rs
crates/node/tests/: schedule.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: lib.rs
crates/protobuf/: Cargo.toml
crates/protobuf/src/: lib.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs
crates/sim/tests/: floors.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wire/: Cargo.toml
crates/wire/src/: adapter.rs  bmt.rs  codec.rs  lib.rs  pb.rs  postage.rs  session.rs
crates/wire/tests/: codec.rs  codec_faults.rs  session_play.rs  wireplay.rs
docs/: architecture.md  presentation.md  spec-mapping.md
formal-models/: README.md
formal-models/tla/: Composition.tla  DiscoveryBarrier.tla  IntervalSettlement.tla  MC_atomic.tla  MC_barrier.cfg  MC_barrier.tla  MC_barrier_off.tla  MC_barrier_wedge.tla  MC_base.tla  MC_churn.tla  MC_compose.tla  MC_compose_single.cfg  MC_compose_single.tla  MC_live.tla  MC_nhood.cfg  MC_nhood.tla  MC_nhood_flat.cfg  MC_nhood_flat.tla  MC_nhood_noconnect.cfg  MC_nhood_noconnect.tla  MC_nhood_nogossip.cfg  MC_nhood_nogossip.tla  MC_nhood_noprune.cfg  MC_nhood_noprune.tla  MC_no_live.cfg  MC_no_live.tla  MC_nodedup.tla  MC_noexclude.tla  MC_nofailover.tla  MC_nonatomic.cfg  MC_nonatomic.tla  MC_noreset.tla  MC_omission.tla  MC_pacing.cfg  MC_pacing.tla  MC_pacing_griefed.tla  MC_partial.tla  MC_respawn.cfg  MC_respawn.tla  MC_scale.tla  (+24 more)
