[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/crypto",
    "crates/overlay",
    "crates/machine",
    "crates/settlement",
    "crates/node",
    "crates/sim",
    "crates/wire",
    "crates/net",
]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ethersphere/melissi"
