[package]
name = "melissi-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Swarm's shared crypto primitives: keccak256, EIP-191 signing hash, secp256k1 recovery, ethereum address — single-sourced, bee-exact"

[dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
