[package]
name = "melissi-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bzz networking: the handshake identity (overlay↔key↔underlay binding). The libp2p transport is the deferred, live-peer layer."

[dependencies]
melissi-types = { path = "../types" }
melissi-crypto = { path = "../crypto" }
melissi-overlay = { path = "../overlay" }
