[package]
name = "melissi-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "bzz networking: the handshake identity + exchange (pure), and an opt-in libp2p transport that drives the same sync drivers over real TCP."

[features]
default = []
# The real transport. Opt-in so `net`'s default build (BzzAddress + the sync
# handshake driver) stays dep-light and async-free — all of libp2p/tokio is
# confined to this feature, and the verified core never sees it. The feature
# also pulls `wire` (the pull-sync pollers + `Session`) since the pull-sync
# shell runs over the same libp2p streams.
libp2p = ["dep:libp2p", "dep:libp2p-stream", "dep:tokio", "dep:futures", "dep:hickory-resolver", "dep:melissi-wire", "dep:melissi-node", "dep:melissi-settlement", "dep:melissi-machine"]
# A WebSocket-Secure transport leg alongside TCP (`swarm::build_swarm_wss`). The
# stream protocols above the connection are unchanged — see `swarm`.
wss = ["libp2p", "libp2p/websocket"]

[dependencies]
melissi-types = { path = "../types" }
melissi-crypto = { path = "../crypto" }
melissi-overlay = { path = "../overlay" }
melissi-protobuf = { path = "../protobuf" }
# Pulled only under the `libp2p` feature: the pull-sync session runs the `wire`
# pollers over real streams. Default `net` (the offline handshake identity)
# never sees it.
melissi-wire = { path = "../wire", optional = true }
melissi-node = { path = "../node", optional = true }
melissi-settlement = { path = "../settlement", optional = true }
melissi-machine = { path = "../machine", optional = true }

# key-type features (ecdsa/secp256k1/ed25519): a real bee peer's libp2p
# identity is an ECDSA key — noise must decode it to verify the peer id.
# dns: resolve the `/dnsaddr/testnet.ethswarm.org` bootnode chain at dial time.
libp2p = { version = "0.56", features = ["tokio", "tcp", "dns", "noise", "yamux", "ecdsa", "secp256k1", "ed25519"], optional = true }
libp2p-stream = { version = "0.4.0-alpha", optional = true }
# The `/dnsaddr/` bootnode resolver's real TXT lookup. Same resolver libp2p's
# `dns` transport already vendors — exposed directly so we get concrete bootnode
# multiaddrs (with their `/p2p/` id) up front, before the handshake.
hickory-resolver = { version = "0.25", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
futures = { version = "0.3", optional = true }
