[package]
name = "melissi-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "the sans-io pull-sync node core: events in, effects out, no I/O, no clock, no threads"

[dependencies]
melissi-machine = { path = "../machine" }
melissi-settlement = { path = "../settlement" }
