[package]
name = "melissi-overlay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "proximity order and overlay address — the fundamentals that define a node's reserve and neighbourhood (bee-exact)"

[dependencies]
melissi-types = { path = "../types" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
