[package]
name = "melissi-overlay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "proximity order and overlay address — the fundamentals that define a node's reserve and neighbourhood (bee-exact)"

[dependencies]
melissi-types = { path = "../types" }
melissi-crypto = { path = "../crypto" }
