[package]
name = "melissi-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "deterministic self-play: k symmetric nodes over a seeded network — the quantitative floors, measured"

[dependencies]
melissi-types = { path = "../types" }
melissi-machine = { path = "../machine" }
melissi-node = { path = "../node" }
melissi-settlement = { path = "../settlement" }
