[package]
name = "melissi-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "browser WASM wrapper — melissi-node + sim, no wire/net/crypto"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
melissi-sim = { path = "../sim" }
melissi-types = { path = "../types" }
wasm-bindgen = "0.2"
