[package]
name = "melissi-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "the bee wire: pullsync protobuf + delimited framing + the bee-wire adapter (positional bitvector, re-offer, paging)"

[dependencies]
melissi-types = { path = "../types" }
melissi-machine = { path = "../machine" }
melissi-node = { path = "../node" }
melissi-settlement = { path = "../settlement" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }

[dev-dependencies]
k256 = { version = "0.13.4", features = ["ecdsa"] }
