[package]
name = "melissi-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "the bee wire: pullsync protobuf + delimited framing + the bee-wire adapter (positional bitvector, re-offer, paging)"

[dependencies]
melissi-types = { path = "../types" }
melissi-crypto = { path = "../crypto" }
melissi-protobuf = { path = "../protobuf" }
melissi-machine = { path = "../machine" }
melissi-node = { path = "../node" }
melissi-settlement = { path = "../settlement" }
